# smart-semantic-scholar-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/smart_semantic_scholar_mcp/: server.py
tests/: references.bib  test_bib_extraction.py  test_integration_mcp.py
